# Dashboard-de-log-stica-feito-em-Python

./: .env.example  .gitignore  Dashboard logistica python.txt  Dockerfile  LICENSE  README.md  RESUMO_GERACAO.md  SVGS_GERADOS.md  Script do dashboard feito em Python  docker-compose.yml  main.py  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
assets/: style.css
docs/: ARQUITETURA.md
src/: __init__.py  app.py  callbacks.py  config.py  styles.py  styles_bi.py  visualizations.py
src/components/: __init__.py  footer.py  header.py  metrics_cards.py  sidebar.py
src/data/: __init__.py  loader.py  processor.py
src/pages/: __init__.py  dashboard_home.py  executive_report.py
src/utils/: __init__.py  cache_manager.py  data_validator.py  logger.py
tests/: __init__.py  test_data_loader.py  test_processor.py  test_visualizations.py
